Selenium for scraping prices and clicking js buttons

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,14 @@ spring.datasource.maxIdle=5
 spring.datasource.minIdle=2
 spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 server.error.include-message=always
+
+#spring.datasource.url=jdbc:postgresql://tyke.db.elephantsql.com:5432/gncznoyf
+#spring.datasource.username=gncznoyf
+#spring.datasource.password=F59xIxSOx7iXAFvBohqybYvjfcKX6-PA
