--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://tyke.db.elephantsql.com:5432/gncznoyf
 spring.datasource.username=gncznoyf
-spring.datasource.password=F59xIxSOx7iXAFvBohqybYvjfcKX6-PA
+spring.port=8081
+spring.datasource.password=GGNFF8YkFdRB04G-VsYOgKLL4SORR1ka
 spring.datasource.maxActive=10
 spring.datasource.maxIdle=5
 spring.datasource.minIdle=2
 spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
